tests/semantic_errors/testcase00.c
// invalid assign

int main(void){
    string foo;
    foo = 3;
    return 0;
}